# redfire

./: .gitignore  BACKEND_DIRECTORY_STRUCTURE.md  DIRECTORY_CLEANUP_REPORT.md  Makefile  PROJECT_SUMMARY_AND_OPTIMIZATION.md  QUICK_START.md  README.md  README_NEW_ARCHITECTURE.md  README_STARTUP.md  config_migration_report.md  start_app.py  start_frontend.py  start_redfire.bat  start_redfire.py  start_simple.bat  start_simple.py
backend/: .env.test  .gitignore  Dockerfile  Makefile  README.md  UNIFIED_SYSTEM_SUMMARY.md  config.yaml.example  database_structure.json  debug_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.bat  run_server.py  setup_database.py
backend/api/: __init__.py  auth_routes.py  base.py
backend/auth/: README.md  auth_config.py  models.py  security.py
backend/config_service/: README.md  __init__.py  main.py  requirements.txt  start_service.py  test_config_service.py
backend/core/: app.py  database.py  initializer.py
backend/database/: connection.py
backend/docs/: RISK_MANAGEMENT_AND_INFRASTRUCTURE_GUIDE.md  配置管理使用指南.md
backend/engines/: lifecycle.py
backend/examples/: chart_module_example.py
backend/gateway/: Dockerfile  README.md  __init__.py  main.py
backend/legacy/: database_config.py
backend/models/: database_models.py
backend/schemas/: __init__.py  auth_schemas.py
backend/scripts/: cleanup_duplicates.py  migrate_config.py  test_unified_system.py
backend/security/: README.md  __init__.py  rate_limiter.py  security_integration.py  security_monitor.py
backend/services/: __init__.py  (+1 more)
(+575 files in other folders)
