[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redfire-backend"
version = "1.0.0"
description = "RedFire Backend - 统一的量化交易后端系统"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.23",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=redfire_backend",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "asyncio: marks tests as async tests",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["redfire_backend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]
